cabal-version:       >=1.10

name:                tp2
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
author:              Loïc Escales
-- maintainer:
-- copyright:
-- category:
build-type:          Simple

executable tp2
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13,
                       extra
  -- hs-source-dirs:
  default-language:    Haskell2010
