cabal-version:       >=1.10

name:                tp2
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
author:              Loïc Escales
-- maintainer:
-- copyright:
-- category:
build-type:          Simple

executable tp2
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       extra
  default-language:    Haskell2010
  ghc-options:         -O2

executable tp2-profiling
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       extra
  default-language:    Haskell2010
  ghc-options:
    -O2
    -prof
    -fprof-auto
    -rtsopts
    "-with-rtsopts=-p -s -h -i0.001"
