[package]
name = "aro-tp3"
version = "0.1.0"
authors = ["Loïc Escales <loic.escales@kakos.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"
failure = "0.1.5"
scan_fmt = "0.2.4"
structopt = "0.3.3"

[build-dependencies]
bindgen = "0.51.1"
